# swingflow

./: .env.local.example  .gitignore  CLAUDE.md  LICENSE  README.md  dev.db  eslint.config.mjs  package-lock.json  package.json  wrangler.toml
.github/workflows/: api-tests.yml
api/: .dockerignore  .env.example  .gitignore  Dockerfile  pyproject.toml  railway.json
api/evals/patterns/: README.md
api/src/wcs_api/: auth.py  main.py  settings.py
api/src/wcs_api/evals/: __init__.py  patterns.py
api/src/wcs_api/routes/: admin.py  analyses.py  billing.py  music.py  peer_reviews.py  shared.py  uploads.py  video.py
api/src/wcs_api/services/: beat_tracker.py  billing.py  music_analyzer.py  peer_reviews.py  pricing.py  quota.py  r2.py  supabase_admin.py  video_analyzer.py
api/src/wcs_api/services/video_analysis/: __init__.py  analyzer.py  gemini_client.py  media_context.py  prompts.py  response_sanitizer.py
api/tests/: conftest.py  test_analyses_routes.py  test_peer_review_guard.py  test_response_sanitizer.py  test_supabase_admin.py
prisma/: schema.prisma  seed.ts
prisma/migrations/20260211053110_init/: migration.sql
public/: manifest.json
src/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
src/app/(app)/: layout.tsx  loading.tsx
src/app/(app)/admin/: page.tsx
src/app/(app)/analysis/: page.tsx
src/app/(app)/analyze/: page.tsx
src/app/(app)/anchors/: page.tsx
src/app/(app)/billing/: page.tsx
src/app/(app)/dashboard/: page.tsx
src/app/(app)/feedback/: page.tsx
src/app/(app)/label/: page.tsx
src/app/(app)/patterns/: page.tsx
src/app/(app)/practice/: page.tsx
src/app/(app)/review/: page.tsx
src/app/(app)/rhythm/: page.tsx
src/app/(app)/settings/: page.tsx
src/app/peer-review/: page.tsx
src/app/shared/: page.tsx
src/components/: category-badge.tsx  circular-timer.tsx  difficulty-badge.tsx  header.tsx  mobile-nav.tsx  pattern-checklist.tsx  providers.tsx  sidebar-nav.tsx  store-provider.tsx
src/components/analytics/: posthog-provider.tsx
src/components/analyze/: beat-panel.tsx  category-sparklines.tsx  pattern-stats-card.tsx  pattern-summary.tsx  peer-reviews-section.tsx  pose-overlay.tsx  score-result-card.tsx  score-trend.tsx  share-card-dialog.tsx  timeline-view.tsx  trend-callouts.tsx
src/components/auth/: require-auth.tsx
src/components/practice/: play-along-card.tsx
src/components/rhythm/: accuracy-heatmap.tsx  beat-grid.tsx  challenge-selector.tsx  music-player.tsx  pattern-timeline.tsx  phrase-beat-grid.tsx  rhythm-controls.tsx  tap-area.tsx  tempo-ramp-controls.tsx  timing-visualization.tsx
src/components/settings/: monthly-usage-card.tsx
src/data/: anchors.json  index.ts  patterns.json
src/hooks/: use-accuracy-history.ts  use-analysis-history.ts  use-audio-player.ts  use-metronome.ts  use-music-analysis.ts  use-pattern-labels.ts  use-profile.ts  use-tap-tracker.ts  use-tempo-ramp.ts  use-timer.ts  use-user.ts  use-video-analysis.ts  use-video-beat-click.ts
src/lib/: analytics.ts  bpm-detection.ts  label-export.ts  level-context.ts  pattern-aggregation.ts  pattern-vocabulary.ts  rhythm-constants.ts  routines.ts  sm2.ts  store.ts  supabase.ts  utils.ts  wcs-api.ts
supabase/: schema.sql
(+10 files in other folders)
