[project]
name = "wcs-api"
version = "0.1.0"
description = "SwingFlow analysis API (music + video)"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "pydantic-settings>=2.6.0",
  "python-multipart>=0.0.27",
  "pyjwt>=2.13.0",
  "librosa>=0.10.2",
  "numpy>=1.26.0",
  "soundfile>=0.12.1",
  "audioread>=3.0.1",
  "httpx>=0.27.0",
  "google-genai>=0.3.0",
  "boto3>=1.34.0",
  "beat-this",
  "torch>=2.0",
]

[dependency-groups]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
# Stop on the first 5 failures so a broken fixture doesn't drown the
# real signal in 100s of cascading errors.
addopts = "--maxfail=5 -q"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wcs_api"]

[tool.uv.sources]
# Pinned to a specific commit so `uv lock` regen doesn't silently
# pull HEAD of a third-party git repo into our container. Supply-
# chain hygiene — bump the rev manually after reviewing upstream
# changes. CPJKU is the Johannes Kepler University Linz CP lab
# (authors of the Beat This! ISMIR 2024 paper).
beat-this = { git = "https://github.com/CPJKU/beat_this.git", rev = "9d787b9797eaa325856a20897187734175467074" }
